--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,45 @@
+@font-face {
+  font-family: 'Montserrat';
+  src: url('/fonts/Montserrat-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Montserrat-Bold';
+  src: url('/fonts/Montserrat-Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Montserrat-Medium';
+  src: url('/fonts/Montserrat-Medium') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Montserrat-Italic';
+  src: url('/fonts/Montserrat-Italic') format('truetype');
+  font-weight: normal;
+  font-style: italic;
+}
+
+/*Light Mode*/
 :root {
+  --bg-color: #f9f7f3;
+  --font-color: #15616d;
+}
+
+/* Dark  mode */
+  :root.dark {
+    --bg-color: #222;
+    --font-color: #fff;
+  }
+
+
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
@@ -71,28 +112,26 @@
     --card-rgb: 100, 100, 100;
     --card-border-rgb: 200, 200, 200;
   }
-}
+} */
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: 'Montserrat', sans-serif;
 }
 
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  min-height: 100vh;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: #15616d;
+  background-color: #f9f7f3;
+  letter-spacing: 1px;
 }
 
 a {
@@ -105,3 +144,26 @@ a {
     color-scheme: dark;
   }
 }
+
+fieldset {
+  border: none;
+}
+
+p {
+  letter-spacing: 1px;
+}
+
+input {
+  background-color: #f9f7f3;
+  color: #15616d;
+  border: 1px solid #15616d;
+  border-radius: 3px;
+  width: 60%
+}
+
+@media screen and (min-width: 768px) {
+  * {
+    font-size: 1rem; 
+  }
+}
+
