--- a/components/GuestDashboard.module.css
+++ b/components/GuestDashboard.module.css
@@ -9,3 +9,10 @@
     padding: 0 1rem;
     margin: 1rem;
 }
+
+@media screen and (min-width: 992px) {
+    .title, .details {
+        width: 70%;
+        margin: 1rem auto;
+    }
+}
