--- a/components/Layout.module.css
+++ b/components/Layout.module.css
@@ -45,7 +45,7 @@
   }
 
   .burger-menu__links a {
-    padding: 2%;
+    padding: 0.5rem 2%;
     margin-left: 3%;
     text-align: center;
     color: #f9f7f3;
